# web-template

./: Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  vitest.config.mjs
.devcontainer/: devcontainer.json
.github/workflows/: ci-docker.yml  ci.yml  release.yml  update-labels.yml
pyprojects/demo/: README.md  package.json  pyproject.toml
pyprojects/demo/tests/: test_answer.py
scripts/: setup_all.sh
