[project]
authors = [{name = "Tony Wu", email = "tonywu6@protonmail.com"}]
classifiers = [
  "Private :: Do Not Upload",
]
dependencies = []
name = "monorepo"
readme = "README.md"
requires-python = ">=3.8, <3.9"
version = "0.0.0"

[project.scripts]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.rye.workspace]
members = ["pyprojects/*"]

[tool.rye]
dev-dependencies = [
  "black>=23.7.0",
  "hatch>=1.7.0",
  "ipython>=8.12.2",
  "pytest>=7.4.0",
  "ruff>=0.0.284",
]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
extend-exclude = """
_pb2\\.pyi?
| _pb2_grpc\\.pyi?
"""
line-length = 88
target-versions = ["py38", "py39", "py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "B", "I"]
src = ["pyprojects/*/src"]

[tool.pyright]
exclude = ["**/node_modules", "**/__pycache__"]
include = ["pyprojects/*/src"]
reportGeneralTypeIssues = "information"
reportOptionalMemberAccess = "information"
reportPrivateImportUsage = "information"
