[project]
authors = [{name = "Tony Wu", email = "tonywu6@protonmail.com"}]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Private :: Do Not Upload",
]
dependencies = []
description = "FIXME: [repo] write the description of your Python package here"
dynamic = ["version"]
name = "demo"
readme = "README.md"
requires-python = ">=3.8, <3.11"

[project.scripts]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "package.json"
# regex to match "version" in package.json
pattern = '"version": "(?P<version>[^"]+)"'

[tool.hatch.build]
artifacts = []
directory = "dist"
only-include = ["src", "package.json"]

[tool.hatch.build.targets.wheel]
sources = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
